Only have one copy of Locst.io installed
Since all instances are actually going to have the exact same
software installed into their respective virtualenvs (namely,
locustio and it's dependencies) they now use one common installation
instead. (which is located at /opt/locust.io/base/) This reduces
the amount of disk space and memory required to run multiple
instances.

--- a/templates/locust_systemd.j2
+++ b/templates/locust_systemd.j2
@@ -21,7 +21,7 @@ PermissionsStartOnly=true
 {% if logfile is defined %}
 {% set options = options + " --logfile=" + logfile %}
 {% endif %}
-ExecStart=/opt/locust.io/{{ instance_name }}/virtenv/bin/locust {{ options }}
+ExecStart=/opt/locust.io/base/virtenv/bin/locust {{ options }}
 KillSignal=SIGTERM
 
 [Install]
