--- a/templates/locust_systemd.j2
+++ b/templates/locust_systemd.j2
@@ -11,7 +11,11 @@ PermissionsStartOnly=true
 {% set options = "--slave" %}
 {% set options = options + " --master-host=" + master_host %}
 {% set options = options + " --master-port=" + master_port|string %}
+{% if locustfile|list|first == '/' %}
 {% set options = options + " --locustfile=" + locustfile %}
+{% else %}
+{% set options = options + " --locustfile=/opt/locust.io/" + instance_name + "/" + locustfile %}
+{% endif %}
 {% if cvs is defined %}
 {% set options = options + " --cvs=" + cvs %}
 {% endif %}
