Introduce start script for persisting options
Locust.IO is now started with one level of indirection, which
is a start_script. This has several advanatages, three of which
are:
 - the options are persisted, so if you run Ansible again to
   change something you don't need to repeat every option
   and value
 - the systemd unit file changes less frequently, so we don't
   need to run 'systemctl daemon-reload' for every minor change
 - the instance directory is now also the working directory, so
   all path specifications are now relative to the instance
   directory, which feels more natural. (e.g. for logfile and
   locustfile)

--- a/templates/locust_systemd.j2
+++ b/templates/locust_systemd.j2
@@ -16,24 +16,7 @@ Group={{ run_as_group }}
 Group=root
 {% endif %}
 PermissionsStartOnly=true
-{% set options = "--slave" %}
-{% set options = options + " --master-host=" + master_host %}
-{% set options = options + " --master-port=" + master_port|string %}
-{% if locustfile|list|first == '/' %}
-{% set options = options + " --locustfile=" + locustfile %}
-{% else %}
-{% set options = options + " --locustfile=/opt/locust.io/" + instance_name + "/" + locustfile %}
-{% endif %}
-{% if csv is defined %}
-{% set options = options + " --csv=" + csv %}
-{% endif %}
-{% if loglevel is defined %}
-{% set options = options + " --loglevel=" + loglevel %}
-{% endif %}
-{% if logfile is defined %}
-{% set options = options + " --logfile=" + logfile %}
-{% endif %}
-ExecStart=/opt/locust.io/base/virtenv/bin/locust {{ options }}
+ExecStart=/opt/locust.io/{{ instance_name }}/start_script
 KillSignal=SIGTERM
 
 [Install]
