--- a/templates/locust_startscript.j2
+++ b/templates/locust_startscript.j2
@@ -6,4 +6,5 @@ LOCUSTCLASSES='{{locust_classes|default([])|join(" ")}}'
 
 cd '/opt/locust.io/{{ instance_name|quote }}'
 /opt/locust.io/base/virtenv/bin/python /opt/locust.io/base/virtenv/bin/locust \
+--slave \
 $LOCUSTCLASSES
